chore. enable preview build and log kotlin blocker